fix: improve API key validation in OpenAiClientService initialization